--- a/index.html
+++ b/index.html
@@ -876,8 +876,7 @@
             <h2>Getuigenissen</h2>
             <p>
               Gedurende de jaren heb ik enkele mooi getuigenissen mogen
-              ontvangen van vrienden, klanten & partners. Een aantal van hen
-              zijn hieronder terug te vinden.
+              ontvangen van vrienden, klanten & partners.
             </p>
           </div>
 
@@ -948,23 +947,22 @@
                 >
                   <p>
                     <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim
-                    sint quorum nulla quem veniam duis minim tempor labore quem
-                    eram duis noster aute amet eram fore quis sint minim.
+                    Misschien bent u wel de volgende tevreden klant die een
+                    getuigenis wilt achterlaten :)
                     <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-3.jpg"
+                    src="assets/img/testimonials/question_mark.png"
                     class="testimonial-img"
                     alt=""
                   />
-                  <h3>Jena Karlis</h3>
-                  <h4>Store Owner</h4>
+                  <!-- <h3>You</h3> -->
+                  <!-- <h4></h4> -->
                 </div>
               </div>
               <!-- End testimonial item -->
 
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -986,10 +984,10 @@
                   <h3>Matt Brandon</h3>
                   <h4>Freelancer</h4>
                 </div>
-              </div>
+              </div> -->
               <!-- End testimonial item -->
 
-              <div class="swiper-slide">
+              <!-- <div class="swiper-slide">
                 <div
                   class="testimonial-item"
                   data-aos="fade-up"
@@ -1011,7 +1009,7 @@
                   <h3>John Larson</h3>
                   <h4>Entrepreneur</h4>
                 </div>
-              </div>
+              </div> -->
               <!-- End testimonial item -->
             </div>
             <div class="swiper-pagination"></div>
